build: 规范工作目录